# symbiotic

./: .gitignore  Cargo.toml  README.md  clipboard.proto  example.toml  handshake.proto  keyboard.proto
src/: clipboard.rs  connection.rs  main.rs  util.rs  utils.rs
src/connection/: incoming.rs  mod.rs  outgoing.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs  x11.rs
src/protocol/: clipboard.rs  handshake.rs  mod.rs
