[package]
name    = "symbiotic-clipboard"
version = "0.1.0"
authors = ["meh. <meh@schizofreni.co>"]

[dependencies]
regex           = "0.1.0"
log             = "0.1.0"
rustc-serialize = "0.2.0"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs.git"

[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs.git"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs.git"

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl.git"

[target.x86_64-pc-windows-gnu.dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"

[target.i686-pc-windows-gnu.dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"

[[bin]]
name = "symbiotic-clipboard"
