[package]
name    = "symbiotic-clipboard"
version = "0.1.0"
authors = ["meh. <meh@schizofreni.co>"]

[dependencies]
regex        = "*"
regex_macros = "*"

log        = "*"
env_logger = "*"

docopt          = "*"
docopt_macros   = "*"
rustc-serialize = "*"

toml    = "*"
openssl = "*"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[target.x86_64-pc-windows-gnu.dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"

[target.i686-pc-windows-gnu.dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"

[[bin]]
name = "symbiotic-clipboard"
