[package]
name    = "symbiotic-clipboard"
version = "0.1.0"
authors = ["meh. <meh@schizofreni.co>"]

[dependencies]
libc = "0.2"

regex   = "0.1"
toml    = "0.1"
tempdir = "0.3"

log        = "0.3"
env_logger = "0.3"

clap    = "2.0"

openssl  = "0.7"
protobuf = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
image = "0.10"

[[bin]]
name = "symbiotic-clipboard"
